# cmake-adventures

./: .gitignore  CMakeLists.txt  README.md  addition.cpp  addition.hpp  main.cpp  makefile  printResult.cpp  printResult.hpp
GTK_PC/: main.cpp
GTK_PC/cmake/modules/: FindGTK3.cmake
my_math/: CMakeLists.txt
my_math/include/my_math/: division.hpp
my_print/: CMakeLists.txt
my_print/src/: printResult.cpp
opencv-usage/: CMakeLists.txt
sample-projects/GTK-pkg-config-demo/: CMakeLists.txt
sample-projects/custom-FindGTKmodule-demo/: CMakeLists.txt
sample-projects/custom-FindGTKmodule-demo/cmake/modules/: FindGTK3.cmake
sample-projects/math-lib-demo/: CMakeLists.txt  main.cpp
sample-projects/math-lib-demo/my_math/src/: addition.cpp  division.cpp
sample-projects/math-lib-demo/my_print/include/my_print/: printResult.hpp
sample-projects/opencv-usage/: main.cpp
script-mode/: CMakeLists.txt
use-math-lib-test/: CMakeLists.txt  main.cpp
